--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         {
             "name": "S M Alif Ahmmed",
             "email": "smalifahmmed@gmail.com",
-            "homepage": "http://smalifahmmed.com",
+            "homepage": "https://smalifahmmed.com",
             "role": "Developer"
         }
     ],
